# transformers_experiments

./: Dockerfile  README.md  pyproject.toml
algebra_summary/: matrix_properties.md
transformer_from_scratch/: train_transformer.ipynb
vanilla_transformers/: README.md  train_transformer.ipynb  train_transformer.py
vanilla_transformers/1-algebra_and_embeddings/: embdeddings.ipynb  embeddings_and_pos.py
vanilla_transformers/1-embeddings/: README.md  embdeddings.ipynb  sentences.csv
vanilla_transformers/2-attention_mechanism/: README.md  attention.ipynb  attention_scores.py  attention_scores_with_pre_trained.py  dimensions.md
