[tool.poetry]
name = "deepexperiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
lightning = "^2.1.1"
transformers = "^4.35.0"
seaborn = "^0.13.0"
spacy = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
